feat: initial project setup for Tabloom

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,5 +1,4 @@
-# The name of your project.
-project_name: Tabloom
+project_name: tabloom
 
 before:
   hooks:
@@ -7,36 +6,30 @@ before:
 
 builds:
   - id: "tabloom"
-    # The path to your main.go file.
-    # This path is a common convention for Go projects.
     main: ./cmd/tabloom/
-    # Embed version information into the binary.
+    binary: tabloom
     ldflags:
       - -s -w -X main.version={{.Version}} -X main.commit={{.Commit}} -X main.date={{.Date}}
-    # Build for popular OS and architectures.
     goos:
       - linux
       - windows
-      - darwin # macOS
+      - darwin
     goarch:
       - amd64
       - arm64
     env:
       - CGO_ENABLED=0
 
-# Archive the binaries.
 archives:
   - format: tar.gz
-    # Include additional files in the archive.
+    name_template: "{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}"
     files:
       - LICENSE
       - README.md
 
-# Generate a checksums file.
 checksum:
   name_template: 'checksums.txt'
 
-# Generate a changelog from git commits.
 changelog:
   sort: asc
   filters:
